2ºSemestre/GIC/Projeto/k3s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytebaazar-ingress
  namespace: g11-bytebazaar
  annotations:
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: bytebazaar.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80    
    - host: api.bytebazaar.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

    - host: admin.bytebazaar.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budibase-service
                port:
                  number: 80

    - host: upload.bytebazaar.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: upload-server-service
                port:
                  number: 80

    - host: upload.bytebazaar.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdn-nginx-service
                port:
                  number: 3005

    - host: grafana.bytebazaar.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 80
    
    - host: otel.bytebazaar.k3s
      http:
        paths:
          - path: /v1/traces
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  number: 4318
